@@ -208,8 +208,10 @@ And last but not least, the values themselves are examined one by one. For
 integer types, the comparison is performed exactly, whereas an approximate
 equality is used for floating-point types. The approximate comparison is
 implemented using an absolute tolerance which can be set by supplying an
-argument to C<use Test::PDL>, or by supplying an optional hash to this function. By
-default, the absolute tolerance is 1e-6.
+argument to C<use Test::PDL>, or by supplying an optional hash to this
+function. By default, the absolute tolerance is 1e-6.
+Values compare equal if their difference is lower than or equal to the
+absolute tolerance.
 
 =back
 
