@@ -4,6 +4,7 @@ Revision history for Test::PDL
 
  - change default-setting to clearer names, remove set_options
  - add possible options-hash parameter to is_pdl et al
+ - change tolerance behaviour from "diff < tol" to "diff <= tol"
 
 0.20      2022-02-26
 
